[package]
name = "sketchytop"
version = "0.1.0"
edition = "2024"
authors = ["Markus Bajlo"]
description = "A minimal sketchytop plugin written in rust that shows basic performance stats"
license = "MIT"
repository = "https://github.com/mackrus/sketchytop"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
