[package]
name = "sketchytop"
version = "0.1.0"
edition = "2024"
authors = ["Markus Bajlo"]
description = "A minimal SketchyBar plugin written in Rust that shows basic performance stats"
license = "MIT"
repository = "https://github.com/mackrus/sketchytop"
homepage = "https://github.com/mackrus/sketchytop"
readme = "README.md"
keywords = ["sketchybar", "macos", "system-monitor", "btop", "rust"]
categories = ["command-line-utilities", "os::macos-apis"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
